deploy/src/main/resources/k8s/kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: raoa
  namespace: raoa-dev
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: raoa
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: raoa
  name: raoa
  namespace: raoa-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      run: raoa
  strategy: {}
  template:
    metadata:
      labels:
        run: raoa
    spec:
      containers:
      - image: docker-snapshot.berg-turbenthal.ch/raoa-new-server:@git.commit.id.describe-short@
        imagePullPolicy: Always
        name: test
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 2
            memory: 3Gi
          limits:
            cpu: 4
            memory: 4Gi
        volumeMounts:
        - mountPath: "/data"
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: raoa-data
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: raoa
  namespace: raoa-dev
  annotations:
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/proxy-body-size: 512m
spec:
  tls:
  - secretName: raoa-dev-tls
    hosts:
    - raoa-dev.berg-turbenthal.ch
  rules:
  - host: raoa-dev.berg-turbenthal.ch
    http:
      paths:
      - backend:
          serviceName: raoa
          servicePort: 8080
